{
  "version": 4,
  "terraform_version": "1.3.5",
  "serial": 1709,
  "lineage": "1b9946b9-1e55-153e-f8a1-2bea77f85c15",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "eip_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-06a8b13f640c3e16f",
            "association_id": "eipassoc-097abcd22625bda7a",
            "domain": "vpc",
            "id": "eipalloc-06a8b13f640c3e16f",
            "network_border_group": "us-east-2",
            "network_interface": "eni-0c76adbd4c7fd80a2",
            "private_dns": "ip-10-10-151-207.us-east-2.compute.internal",
            "private_ip": "10.10.151.207",
            "public_dns": "ec2-3-129-172-232.us-east-2.compute.amazonaws.com",
            "public_ip": "3.129.172.232",
            "public_ipv4_pool": "amazon",
            "vpc": true
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "eip_2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0f091e8e7541976f8",
            "association_id": "eipassoc-0d37d0f2e6f34f4a3",
            "domain": "vpc",
            "id": "eipalloc-0f091e8e7541976f8",
            "network_border_group": "us-east-2",
            "network_interface": "eni-0866c21e9eaf19874",
            "private_dns": "ip-10-10-152-247.us-east-2.compute.internal",
            "private_ip": "10.10.152.247",
            "public_dns": "ec2-3-15-113-14.us-east-2.compute.amazonaws.com",
            "public_ip": "3.15.113.14",
            "public_ipv4_pool": "amazon",
            "vpc": true
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "appserver_1a_0",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0a606d8395a538502",
            "arn": "arn:aws:ec2:us-east-2:076757543616:instance/i-076363e3b3d5e8453",
            "associate_public_ip_address": false,
            "availability_zone": "us-east-2a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-076363e3b3d5e8453",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "utc_key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": true,
            "primary_network_interface_id": "eni-0c3d17015821cfdf7",
            "private_dns": "ip-10-10-1-239.us-east-2.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.10.1.239",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-09d7cd5ff348824cb",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "sg-07a9b5bb143359c15"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0b69b2f0727cd28ca",
            "tags": {
              "Environment": "dev",
              "Name": "appserver_1a_0",
              "Terraform": "true",
              "team": "config management"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "appserver_1a_0",
              "Terraform": "true",
              "team": "config management"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-07a9b5bb143359c15"
            ]
          },
          "dependencies": [
            "aws_security_group.app_server_sg",
            "aws_subnet.private_subnet_1a_0"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "appserver_1a_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0a606d8395a538502",
            "arn": "arn:aws:ec2:us-east-2:076757543616:instance/i-05dbeeec64269accf",
            "associate_public_ip_address": false,
            "availability_zone": "us-east-2a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-05dbeeec64269accf",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "utc_key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": true,
            "primary_network_interface_id": "eni-0c5f6cfa9107fd2e9",
            "private_dns": "ip-10-10-2-215.us-east-2.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.10.2.215",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0a5df3b77e5a68d52",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "sg-07a9b5bb143359c15"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0b8a7f3761afa843f",
            "tags": {
              "Environment": "dev",
              "Name": "appserver_1a_1",
              "Terraform": "true",
              "team": "config management"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "appserver_1a_1",
              "Terraform": "true",
              "team": "config management"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-07a9b5bb143359c15"
            ]
          },
          "dependencies": [
            "aws_security_group.app_server_sg",
            "aws_subnet.private_subnet_1a_1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "appserver_1b_0",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0a606d8395a538502",
            "arn": "arn:aws:ec2:us-east-2:076757543616:instance/i-0c356ac7b97dc0710",
            "associate_public_ip_address": false,
            "availability_zone": "us-east-2b",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0c356ac7b97dc0710",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "utc_key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": true,
            "primary_network_interface_id": "eni-08ab8d472a604f7be",
            "private_dns": "ip-10-10-3-37.us-east-2.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.10.3.37",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0dade75067a9e346a",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "sg-07a9b5bb143359c15"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-03ff7b7a1f8052a6f",
            "tags": {
              "Environment": "dev",
              "Name": "appserver_1b_0",
              "Terraform": "true",
              "team": "config management"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "appserver_1b_0",
              "Terraform": "true",
              "team": "config management"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-07a9b5bb143359c15"
            ]
          },
          "dependencies": [
            "aws_security_group.app_server_sg",
            "aws_subnet.private_subnet_1b_0"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "appserver_1b_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0a606d8395a538502",
            "arn": "arn:aws:ec2:us-east-2:076757543616:instance/i-0505abe9c91c4dae9",
            "associate_public_ip_address": false,
            "availability_zone": "us-east-2b",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0505abe9c91c4dae9",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "utc_key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": true,
            "primary_network_interface_id": "eni-0c0834fe28305d8c2",
            "private_dns": "ip-10-10-4-150.us-east-2.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.10.4.150",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0615bd6da9fc3949e",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "sg-07a9b5bb143359c15"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0640eb0f5ab06a713",
            "tags": {
              "Environment": "dev",
              "Name": "appserver_1b_1",
              "Terraform": "true",
              "team": "config management"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "appserver_1b_1",
              "Terraform": "true",
              "team": "config management"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-07a9b5bb143359c15"
            ]
          },
          "dependencies": [
            "aws_security_group.app_server_sg",
            "aws_subnet.private_subnet_1b_1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "bastion_host",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0a606d8395a538502",
            "arn": "arn:aws:ec2:us-east-2:076757543616:instance/i-074df8b0472fb7043",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-2a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-074df8b0472fb7043",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "utc_key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": true,
            "primary_network_interface_id": "eni-02fa1953fa7118beb",
            "private_dns": "ip-10-10-151-42.us-east-2.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.10.151.42",
            "public_ip": "18.216.173.242",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0a58cd164f2369897",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "sg-00b366756246eaaa6"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0a39beffdfd6aa89d",
            "tags": {
              "Environment": "dev",
              "Name": "bastion_host",
              "Terraform": "true",
              "team": "config management"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "bastion_host",
              "Terraform": "true",
              "team": "config management"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-00b366756246eaaa6"
            ]
          },
          "dependencies": [
            "aws_security_group.bastion_host_sg",
            "aws_subnet.public_subnet_1a",
            "aws_vpc.utc_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:076757543616:internet-gateway/igw-015057d42b4810162",
            "id": "igw-015057d42b4810162",
            "owner_id": "076757543616",
            "tags": {
              "Name": "utc_vpc_igw"
            },
            "tags_all": {
              "Name": "utc_vpc_igw"
            },
            "vpc_id": "vpc-02829cac5a3fb6687"
          },
          "dependencies": [
            "aws_vpc.utc_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "utc_target_group",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-2:076757543616:targetgroup/utc-target-group/6bc9bf4a3c6cdcdb",
            "arn_suffix": "targetgroup/utc-target-group/6bc9bf4a3c6cdcdb",
            "connection_termination": false,
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 5,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-2:076757543616:targetgroup/utc-target-group/6bc9bf4a3c6cdcdb",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "name": "utc-target-group",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "tags": {
              "env": "dev",
              "team": "config management"
            },
            "tags_all": {
              "env": "dev",
              "team": "config management"
            },
            "target_failover": [
              {
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-02829cac5a3fb6687"
          },
          "dependencies": [
            "aws_vpc.utc_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "nat_gw_1a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-06a8b13f640c3e16f",
            "connectivity_type": "public",
            "id": "nat-0c499ca7b01d6f5fd",
            "network_interface_id": "eni-0c76adbd4c7fd80a2",
            "private_ip": "10.10.151.207",
            "public_ip": "3.129.172.232",
            "subnet_id": "subnet-0a39beffdfd6aa89d",
            "tags": {
              "Name": "us-east-2a_nat_gw"
            },
            "tags_all": {
              "Name": "us-east-2a_nat_gw"
            }
          },
          "dependencies": [
            "aws_eip.eip_1",
            "aws_internet_gateway.igw",
            "aws_subnet.public_subnet_1a",
            "aws_vpc.utc_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "nat_gw_1b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0f091e8e7541976f8",
            "connectivity_type": "public",
            "id": "nat-08e8d13f2923cec82",
            "network_interface_id": "eni-0866c21e9eaf19874",
            "private_ip": "10.10.152.247",
            "public_ip": "3.15.113.14",
            "subnet_id": "subnet-08c42bd1cb4b217fc",
            "tags": {
              "Name": "us-east-2b_nat_gw"
            },
            "tags_all": {
              "Name": "us-east-2b_nat_gw"
            }
          },
          "dependencies": [
            "aws_eip.eip_2",
            "aws_internet_gateway.igw",
            "aws_subnet.public_subnet_1b",
            "aws_vpc.utc_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:076757543616:route-table/rtb-0a599bf8405ffdb79",
            "id": "rtb-0a599bf8405ffdb79",
            "owner_id": "076757543616",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "nat-0c499ca7b01d6f5fd",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "utc_vpc_private_1"
            },
            "tags_all": {
              "Name": "utc_vpc_private_1"
            },
            "timeouts": null,
            "vpc_id": "vpc-02829cac5a3fb6687"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_nat_gateway.nat_gw_1a",
            "aws_vpc.utc_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private_2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:076757543616:route-table/rtb-09d6f18a891a77065",
            "id": "rtb-09d6f18a891a77065",
            "owner_id": "076757543616",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "nat-08e8d13f2923cec82",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "utc_vpc_private_2"
            },
            "tags_all": {
              "Name": "utc_vpc_private_2"
            },
            "timeouts": null,
            "vpc_id": "vpc-02829cac5a3fb6687"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_nat_gateway.nat_gw_1b",
            "aws_vpc.utc_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:076757543616:route-table/rtb-0db03e7fed5faa54a",
            "id": "rtb-0db03e7fed5faa54a",
            "owner_id": "076757543616",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-015057d42b4810162",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "utc_vpc_public"
            },
            "tags_all": {
              "Name": "utc_vpc_public"
            },
            "timeouts": null,
            "vpc_id": "vpc-02829cac5a3fb6687"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_vpc.utc_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "privsn_1a_0",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-00ece4e44c2dd0faa",
            "route_table_id": "rtb-0a599bf8405ffdb79",
            "subnet_id": "subnet-0b69b2f0727cd28ca"
          },
          "dependencies": [
            "aws_eip.eip_1",
            "aws_internet_gateway.igw",
            "aws_nat_gateway.nat_gw_1a",
            "aws_route_table.private_1",
            "aws_subnet.private_subnet_1a_0",
            "aws_subnet.public_subnet_1a",
            "aws_vpc.utc_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "privsn_1a_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-04ddd5d3567fb5ba1",
            "route_table_id": "rtb-0a599bf8405ffdb79",
            "subnet_id": "subnet-0b8a7f3761afa843f"
          },
          "dependencies": [
            "aws_eip.eip_1",
            "aws_internet_gateway.igw",
            "aws_nat_gateway.nat_gw_1a",
            "aws_route_table.private_1",
            "aws_subnet.private_subnet_1a_1",
            "aws_subnet.public_subnet_1a",
            "aws_vpc.utc_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "privsn_1b_0",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-04b8237ed100b4af5",
            "route_table_id": "rtb-09d6f18a891a77065",
            "subnet_id": "subnet-03ff7b7a1f8052a6f"
          },
          "dependencies": [
            "aws_eip.eip_2",
            "aws_internet_gateway.igw",
            "aws_nat_gateway.nat_gw_1b",
            "aws_route_table.private_2",
            "aws_subnet.private_subnet_1b_0",
            "aws_subnet.public_subnet_1b",
            "aws_vpc.utc_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "privsn_1b_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-06912da5f336dbeb1",
            "route_table_id": "rtb-09d6f18a891a77065",
            "subnet_id": "subnet-0640eb0f5ab06a713"
          },
          "dependencies": [
            "aws_eip.eip_2",
            "aws_internet_gateway.igw",
            "aws_nat_gateway.nat_gw_1b",
            "aws_route_table.private_2",
            "aws_subnet.private_subnet_1b_1",
            "aws_subnet.public_subnet_1b",
            "aws_vpc.utc_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "privsn_1c_0",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0a24fef045acd22c0",
            "route_table_id": "rtb-0a599bf8405ffdb79",
            "subnet_id": "subnet-09c4bc9704d7612ec"
          },
          "dependencies": [
            "aws_eip.eip_1",
            "aws_internet_gateway.igw",
            "aws_nat_gateway.nat_gw_1a",
            "aws_route_table.private_1",
            "aws_subnet.private_subnet_1c_0",
            "aws_subnet.public_subnet_1a",
            "aws_vpc.utc_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "privsn_1c_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-04a670cd31b6527a7",
            "route_table_id": "rtb-09d6f18a891a77065",
            "subnet_id": "subnet-0cf26f0508e1b8cb5"
          },
          "dependencies": [
            "aws_eip.eip_2",
            "aws_internet_gateway.igw",
            "aws_nat_gateway.nat_gw_1b",
            "aws_route_table.private_2",
            "aws_subnet.private_subnet_1c_1",
            "aws_subnet.public_subnet_1b",
            "aws_vpc.utc_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "pubsn_1a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-077c938f5b08c5eac",
            "route_table_id": "rtb-0db03e7fed5faa54a",
            "subnet_id": "subnet-0a39beffdfd6aa89d"
          },
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_route_table.public",
            "aws_subnet.public_subnet_1a",
            "aws_vpc.utc_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "pubsn_1b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-064fb2da260e16fb9",
            "route_table_id": "rtb-0db03e7fed5faa54a",
            "subnet_id": "subnet-08c42bd1cb4b217fc"
          },
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_route_table.public",
            "aws_subnet.public_subnet_1b",
            "aws_vpc.utc_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "pubsn_1c",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0de8826a0f53b165e",
            "route_table_id": "rtb-0db03e7fed5faa54a",
            "subnet_id": "subnet-0140caafa4ada0af8"
          },
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_route_table.public",
            "aws_subnet.public_subnet_1c",
            "aws_vpc.utc_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "alb_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:076757543616:security-group/sg-0ef9a877f9befa7c3",
            "description": "Allow inbound from everywhere to port 80 and 443, and all outbound",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0ef9a877f9befa7c3",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "inbound HTTP",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "inbound HTTPS",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              }
            ],
            "name": "alb_sg",
            "name_prefix": "",
            "owner_id": "076757543616",
            "revoke_rules_on_delete": false,
            "tags": {
              "env": "dev",
              "team": "config management"
            },
            "tags_all": {
              "env": "dev",
              "team": "config management"
            },
            "timeouts": null,
            "vpc_id": "vpc-02829cac5a3fb6687"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.utc_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "app_server_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:076757543616:security-group/sg-07a9b5bb143359c15",
            "description": "Allow inbound from from alb_sg to port 80",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-07a9b5bb143359c15",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "alb_sg to 80 http",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0ef9a877f9befa7c3"
                ],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [],
                "description": "bastion_host_sg to 22 ssh",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-00b366756246eaaa6"
                ],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "app_server_sg",
            "name_prefix": "",
            "owner_id": "076757543616",
            "revoke_rules_on_delete": false,
            "tags": {
              "env": "dev",
              "team": "config management"
            },
            "tags_all": {
              "env": "dev",
              "team": "config management"
            },
            "timeouts": null,
            "vpc_id": "vpc-02829cac5a3fb6687"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.alb_sg",
            "aws_security_group.bastion_host_sg",
            "aws_vpc.utc_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "bastion_host_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:076757543616:security-group/sg-00b366756246eaaa6",
            "description": "Allow inbound from my IP to port 22, and all outbound",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-00b366756246eaaa6",
            "ingress": [
              {
                "cidr_blocks": [
                  "174.173.62.231/32"
                ],
                "description": "localhost to ssh 22",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "bastion_host_sg",
            "name_prefix": "",
            "owner_id": "076757543616",
            "revoke_rules_on_delete": false,
            "tags": {
              "env": "dev",
              "team": "config management"
            },
            "tags_all": {
              "env": "dev",
              "team": "config management"
            },
            "timeouts": null,
            "vpc_id": "vpc-02829cac5a3fb6687"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.utc_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "database_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:076757543616:security-group/sg-0ab872be0cf2d94b7",
            "description": "Allow inbound from app_server_sg to 3306 mysql",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0ab872be0cf2d94b7",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "app_server_sg to 3306 mysql",
                "from_port": 3306,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-07a9b5bb143359c15"
                ],
                "self": false,
                "to_port": 3306
              }
            ],
            "name": "database_sg",
            "name_prefix": "",
            "owner_id": "076757543616",
            "revoke_rules_on_delete": false,
            "tags": {
              "env": "dev",
              "team": "config management"
            },
            "tags_all": {
              "env": "dev",
              "team": "config management"
            },
            "timeouts": null,
            "vpc_id": "vpc-02829cac5a3fb6687"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.alb_sg",
            "aws_security_group.app_server_sg",
            "aws_security_group.bastion_host_sg",
            "aws_vpc.utc_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_subnet_1a_0",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:076757543616:subnet/subnet-0b69b2f0727cd28ca",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2a",
            "availability_zone_id": "use2-az1",
            "cidr_block": "10.10.1.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0b69b2f0727cd28ca",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "076757543616",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "utc_vpc_private_subnet_1a_0"
            },
            "tags_all": {
              "Name": "utc_vpc_private_subnet_1a_0"
            },
            "vpc_id": "vpc-02829cac5a3fb6687"
          },
          "dependencies": [
            "aws_vpc.utc_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_subnet_1a_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:076757543616:subnet/subnet-0b8a7f3761afa843f",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2a",
            "availability_zone_id": "use2-az1",
            "cidr_block": "10.10.2.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0b8a7f3761afa843f",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "076757543616",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "utc_vpc_private_subnet_1a_1"
            },
            "tags_all": {
              "Name": "utc_vpc_private_subnet_1a_1"
            },
            "vpc_id": "vpc-02829cac5a3fb6687"
          },
          "dependencies": [
            "aws_vpc.utc_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_subnet_1b_0",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:076757543616:subnet/subnet-03ff7b7a1f8052a6f",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2b",
            "availability_zone_id": "use2-az2",
            "cidr_block": "10.10.3.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-03ff7b7a1f8052a6f",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "076757543616",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "utc_vpc_private_subnet_1b_0"
            },
            "tags_all": {
              "Name": "utc_vpc_private_subnet_1b_0"
            },
            "vpc_id": "vpc-02829cac5a3fb6687"
          },
          "dependencies": [
            "aws_vpc.utc_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_subnet_1b_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:076757543616:subnet/subnet-0640eb0f5ab06a713",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2b",
            "availability_zone_id": "use2-az2",
            "cidr_block": "10.10.4.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0640eb0f5ab06a713",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "076757543616",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "utc_vpc_private_subnet_1b_1"
            },
            "tags_all": {
              "Name": "utc_vpc_private_subnet_1b_1"
            },
            "vpc_id": "vpc-02829cac5a3fb6687"
          },
          "dependencies": [
            "aws_vpc.utc_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_subnet_1c_0",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:076757543616:subnet/subnet-09c4bc9704d7612ec",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2c",
            "availability_zone_id": "use2-az3",
            "cidr_block": "10.10.5.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-09c4bc9704d7612ec",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "076757543616",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "utc_vpc_private_subnet_1c_0"
            },
            "tags_all": {
              "Name": "utc_vpc_private_subnet_1c_0"
            },
            "vpc_id": "vpc-02829cac5a3fb6687"
          },
          "dependencies": [
            "aws_vpc.utc_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_subnet_1c_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:076757543616:subnet/subnet-0cf26f0508e1b8cb5",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2c",
            "availability_zone_id": "use2-az3",
            "cidr_block": "10.10.6.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0cf26f0508e1b8cb5",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "076757543616",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "utc_vpc_private_subnet_1c_1"
            },
            "tags_all": {
              "Name": "utc_vpc_private_subnet_1c_1"
            },
            "vpc_id": "vpc-02829cac5a3fb6687"
          },
          "dependencies": [
            "aws_vpc.utc_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_subnet_1a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:076757543616:subnet/subnet-0a39beffdfd6aa89d",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2a",
            "availability_zone_id": "use2-az1",
            "cidr_block": "10.10.151.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0a39beffdfd6aa89d",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "076757543616",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "utc_vpc_public_subnet_1a"
            },
            "tags_all": {
              "Name": "utc_vpc_public_subnet_1a"
            },
            "vpc_id": "vpc-02829cac5a3fb6687"
          },
          "dependencies": [
            "aws_vpc.utc_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_subnet_1b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:076757543616:subnet/subnet-08c42bd1cb4b217fc",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2b",
            "availability_zone_id": "use2-az2",
            "cidr_block": "10.10.152.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-08c42bd1cb4b217fc",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "076757543616",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "utc_vpc_public_subnet_1b"
            },
            "tags_all": {
              "Name": "utc_vpc_public_subnet_1b"
            },
            "vpc_id": "vpc-02829cac5a3fb6687"
          },
          "dependencies": [
            "aws_vpc.utc_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_subnet_1c",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:076757543616:subnet/subnet-0140caafa4ada0af8",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2c",
            "availability_zone_id": "use2-az3",
            "cidr_block": "10.10.153.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0140caafa4ada0af8",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "076757543616",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "utc_vpc_public_subnet_1c"
            },
            "tags_all": {
              "Name": "utc_vpc_public_subnet_1c"
            },
            "vpc_id": "vpc-02829cac5a3fb6687"
          },
          "dependencies": [
            "aws_vpc.utc_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "utc_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:076757543616:vpc/vpc-02829cac5a3fb6687",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.10.0.0/16",
            "default_network_acl_id": "acl-028a57a9f39ad1f82",
            "default_route_table_id": "rtb-0bceaf056574e1451",
            "default_security_group_id": "sg-0aede6fa7cfd71147",
            "dhcp_options_id": "dopt-0af7c3e50257acb1c",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-02829cac5a3fb6687",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0bceaf056574e1451",
            "owner_id": "076757543616",
            "tags": {
              "Environment": "dev",
              "Name": "utc_vpc",
              "Team": "config management",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "utc_vpc",
              "Team": "config management",
              "Terraform": "true"
            }
          }
        }
      ]
    }
  ]
}